--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ body{
 .future-forecast{
     background: rgba(24,24,27,0.8);
     padding: 15px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     display: flex;
     color:white;
